fix headings overlapped by nav bar when scrolling via TOC
seems to work sometimes (when clicking TOC link for the second time), but not always... 🤔

--- a/assets/css/tailwind.scss
+++ b/assets/css/tailwind.scss
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=fallback');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=fallback");
 
 @tailwind base;
 @tailwind components;
 
 // Additional styles
-@import 'additional-styles/utility-patterns.scss';
-@import 'additional-styles/range-slider.scss';
-@import 'additional-styles/toggle-switch.scss';
-@import 'additional-styles/theme.scss';
+@import "additional-styles/utility-patterns.scss";
+@import "additional-styles/range-slider.scss";
+@import "additional-styles/toggle-switch.scss";
+@import "additional-styles/theme.scss";
 
 @tailwind utilities;
 
@@ -25,7 +25,7 @@
 
 // AOS styles
 $aos-distance: 10px;
-@import 'node_modules/aos/src/sass/aos.scss';
+@import "node_modules/aos/src/sass/aos.scss";
 
 @layer base {
   h1 {
@@ -58,10 +58,16 @@ $aos-distance: 10px;
       margin-bottom: 1rem;
     }
     a {
-      @apply underline hover:no-underline
+      @apply underline hover:no-underline;
     }
     img {
       margin: auto;
+    }
+    h1,
+    h2,
+    h3,
+    h4 {
+      scroll-margin-top: 100px;
     }
   }
 }
